Added secound builder and corrected tests